<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_background"
    android:padding="20dp"
    tools:context=".CustomActivity">

    <LinearLayout
        android:id="@+id/custom_outline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <RadioGroup
            android:id="@+id/selection_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/percentage_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/handjet"
                android:text="@string/percentage_ratio" />

            <RadioButton
                android:id="@+id/amount_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/handjet"
                android:text="@string/amount" />

        </RadioGroup>

        <EditText
            android:id="@+id/total_custom_amount_edit_text"
            style="@style/EditTotalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent_white"
            android:ems="10"
            android:hint="@string/total_amount"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

        </LinearLayout>

        <TextView
            android:id="@+id/custom_result_text_view"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent_white"
            android:text="@string/price_result"
            android:textSize="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/custom_home_button"
                style="@style/RoundButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home" />

            <Button
                android:id="@+id/custom_next_button"
                style="@style/RoundButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>